Fixed screenshare cropping.

--- a/src/app/components/gallery-view/gallery-view.component.scss
+++ b/src/app/components/gallery-view/gallery-view.component.scss
@@ -194,3 +194,8 @@ mat-icon {
 .red {
   color: red;
 }
+
+.screenshareNoCrop {
+  object-fit: contain !important;
+  background: #252525;
+}
